src/app/pages/new-product/new-product.component.scss
.form-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 20px;
  width: 100%;
  padding: 0px 10px;
}

.card {
  background-color: var(--gray-6);
  border: 0;
  width: 100%;
  height: 96px;
  justify-content: center;
  text-align: center;

  h1 {
    font-weight: 700;
  }
}

.form-group {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.unit-bale-dropdown {
  position: relative;
  width: 100%;

  select {
    width: 100%;
    height: 48px;
    padding: 10px;
    font-size: 16px;
    border: 1px solid var(--gray-4);
    background-color: transparent !important;
    border-radius: 6px;
    appearance: none;
    cursor: pointer;

    &:focus {
      outline: none;
      border-color: var(--green-mid);
    }
  }

  &::after {
    content: "keyboard_arrow_down";
    font-family: 'Material Icons';
    position: absolute;
    top: 50%;
    right: 10px;
    transform: translateY(-50%);
    pointer-events: none;
  }
}

